# fty-shm

./: .dependencies-graph.dot.part  .gitignore  .travis.yml  CMakeLists.txt  Jenkinsfile  LICENSE  Makefile.am  README.md  ci_build.sh  ci_dependencies.sh  ci_deploy.sh  ci_deploy_obs.sh  configure.ac  ftyshmcli.cfg  install.xml  license.xml  project.xml
benchmark/: CMakeLists.txt
benchmark/src/: benchmark.cc
builds/check_zproject/: ci_build.sh
builds/cmake/: ci_build.sh
doc/: .gitignore  Makefile.am  asciidoc.conf  fty-shm.adoc
fty-shm-cleanup/: CMakeLists.txt
fty-shm-cleanup/resources/: fty-shm.conf.in  service.in  timer.in
fty-shm-cleanup/src/: fty_shm_cleanup.cc
fty-shm-cli/: CMakeLists.txt
fty-shm-cli/resources/: fty-shm-cli.logger
fty-shm-cli/src/: fty_shm_cli.cc
include/: Makefile.am  fty_shm.h  fty_shm_library.h  ftyshm.h
lib/: CMakeLists.txt
lib/public_include/: fty_shm.h
lib/src/: fty_shm.cc  publisher.cc  publisher.h
lib/tests/: main.cc  shm.cpp
packaging/debian/: changelog  control  copyright  fty-shm.dsc.obs  fty-shm.install  fty-shm.manpages  libfty-shm-dev.install  libfty-shm0.install  libfty-shm0.links  postinst  rules
packaging/redhat/: fty-shm.spec
src/: .gitignore  Makemodule-local.am  Makemodule.am  benchmark.cc  fty-shm-cleanup.cfg.in  fty-shm-cleanup.service.in  fty-shm-cleanup.timer.in  fty-shm.conf  fty_shm.c  fty_shm.cc  fty_shm_classes.h  fty_shm_cleanup.cc  fty_shm_cli.cc  fty_shm_private_selftest.c  fty_shm_private_selftest.cc  fty_shm_selftest.c  fty_shm_selftest.cc  internal.h  libfty_shm.pc.in
zproject-hold/builds/check_zproject/: ci_build.sh
zproject-hold/doc/: Makefile.am
